test_programs/compile_failure/noirc_frontend_tests_visibility_errors_if_pub_function_leaks_private_type_in_arg/src/main.nr

    pub mod moo {
        struct Bar {}
        pub fn bar(_bar: Bar) {}

        pub fn no_unused_warnings() {
            let _ = Bar {};
        }
    }
    fn main() {}
    